# Crew-Composer

./: .env.example  .gitignore  README.md  hello_world_bullet_points.txt  pyproject.toml  requirements.txt
.windsurf/rules/: venv.md
app/: streamlit_app.py
config/: agents.knowledge.yaml  agents.yaml  crew.yaml  crews.yaml  mcp_tools.yaml  tasks.yaml  tools.yaml
docs/: README.md  best-practices.md  cli.md  configuration.md  faq.md  getting-started.md  installation.md  knowledge-sources.md  main.md  multi-agent-mapping.md  scheduling.md  tools-and-mcp.md  troubleshooting.md  ui.md
knowledge/: api_endpoints.json  company_policies.txt  products.csv
src/crew_composer/: __init__.py  cli.py  config_loader.py  crew.py  observability.py  scheduler.py
src/crew_composer/tools/: __init__.py  llamaindex_query_tool.py  schedule_tool.py
src/crew_composer/ui/: __init__.py  app.py  tabs.py  utils.py
src/crewai_template/: __init__.py  cli.py  config_loader.py  crew.py  errors.py  knowledge_loader.py  mcp_integration.py  tool_registry.py
