[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crewai-template"
version = "0.1.0"
description = "Modular, config-driven CrewAI template with CLI and tool registry"
authors = [{ name = "CrewAI Template" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "crewai>=0.103.0",
  "crewai-tools>=0.1.0",
  "typer[all]>=0.12.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
  "rich>=13.7.1",
  "python-dotenv>=1.0.1",
  "firecrawl>=1.0.0",
]

[project.scripts]
crewai-template = "crewai_template.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
