[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crew-composer"
version = "0.2.0"
description = "Config-driven CrewAI composer with CLI, tool registry, and MCP integration"
authors = [{ name = "CrewAI Template" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "crewai>=0.103.0",
  "crewai-tools>=0.1.0",
  "typer[all]>=0.12.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
  "rich>=13.7.1",
  "python-dotenv>=1.0.1",
  "firecrawl>=1.0.0",
  "streamlit>=1.35.0",
]

[project.scripts]
crew-composer = "crew_composer.cli:app"
crew-comp = "crew_composer.cli:app"
# Temporary alias for backward compatibility; will be removed in a future release
crewai-template = "crew_composer.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
