[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crew-composer"
version = "0.3.0"
description = "Config-driven CrewAI composer with CLI, tool registry, and MCP integration"
authors = [{ name = "CrewAI Template" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "crewai>=0.165.1",
  "crewai-tools>=0.62.0",
  "typer[all]>=0.16.0",
  "pydantic>=2.11.0",
  "PyYAML>=6.0.2",
  "rich>=13.7.1",
  "python-dotenv>=1.1.1",
  "firecrawl>=1.0.0",
  # Document parsing for web/PDF/office knowledge sources
  "docling>=2.54.0",
  "streamlit>=1.35.0",
  "APScheduler>=3.11.0",
  "filelock>=3.19.1",
]

[project.scripts]
crew-composer = "crew_composer.cli:app"
crew-comp = "crew_composer.cli:app"
# Temporary alias for backward compatibility; will be removed in a future release
crewai-template = "crew_composer.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
